Sorted out layout issues around footer and inserted News list

--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -17,10 +17,12 @@
 			}
 
 			@include inner;
+			@include innerbox;
 		}
 
 		&.alt {
 			background-color: transparent;
 			border-bottom: solid 1px _palette(border);
-		}
+        }
+        padding-bottom: 2px;
 	}
